<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checkable="true"
            android:checked="true"
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:checkable="true"
            android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history"/>
    </group>
    <group android:checkableBehavior="none">
        <item
            android:checkable="false"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
    </group>
</menu>