<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/location_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:singleLine="true"
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_fragment_location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/use_gps_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_input_layout"
            android:layout_margin="4dp"
            android:gravity="end"
            android:text="@string/home_fragment_use_gps_location"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/use_gps_location"
            android:background="?android:attr/listDivider" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:text="@string/home_fragment_current_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_current"
            android:text="@string/home_fragment_forecast_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
    </RelativeLayout>
</FrameLayout>