<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/header_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_weather"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_city"
                    android:layout_toEndOf="@id/iv_weather"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/tv_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_temperature"
                    android:layout_toEndOf="@id/iv_weather"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/header_panel"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/detail_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:id="@+id/detail_row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_request_timestamp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_request_timestamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_data_timestamp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_data_timestamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_humidity"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_wind_speed"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_wind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_wind_direction"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_wind_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:text="@string/weather_data_pressure"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="4dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_row_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:paddingHorizontal="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weather_data_precipitation"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:paddingHorizontal="4dp"
                        android:id="@+id/tv_precipation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>